# coinpilot_model

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
coinpilot_model/: __init__.py  dataset.py  features.py  plots.py
coinpilot_model/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: lstm_BTC.h5  lstm_BTC.h5_scalers.pkl
notebooks/: bitcoin-price-analysis-by-tweets.ipynb  crypto_forecast.ipynb  crypto_forecast_3.ipynb
